--- a/ws1/GoogleChrome.ws1.recipe.yaml
+++ b/ws1/GoogleChrome.ws1.recipe.yaml
@@ -23,10 +23,7 @@ Input:
   WS1_SMART_GROUP_NAME: SMART_GROUP_NAME_HERE
   WS1_PUSH_MODE: PUSH_MODE_SETTING
 
-  # WS1 new features testing
-  WS1_SMART_GROUP2_NAMES:
-  - SECOND_STAGE_SMART_GROUP1
-  WS1_DEPLOYMENT2_DELAY: SECOND_STAGE_DEPLOYMENT_DELAY_DAYS
+  # WS1 - testing new AppsV2 assignments feature
   ws1_assignments:
       - distribution:
           name: ASSIGNMENT_NAME
@@ -45,7 +42,6 @@ Input:
             desired_state_management: false
             prevent_removal: false
 
-
 Process:
 - Processor: com.github.codeskipper.VMWARE-WorkSpaceOneImporter/WorkSpaceOneImporter
   Arguments:
@@ -61,4 +57,3 @@ Process:
     ws1_groupid: '%WS1_GROUPID%'
     ws1_smart_group_name: '%WS1_SMART_GROUP_NAME%'
     ws1_push_mode: '%WS1_PUSH_MODE%'
-    ws1_deployment2_delay: '%WS1_DEPLOYMENT2_DELAY%'
