testing recipe for Company Portal with ws1_assignments for AppsV2 API style assignment-rules

--- a/ws1/CompanyPortal.ws1.recipe.yaml
+++ b/ws1/CompanyPortal.ws1.recipe.yaml
@@ -1,13 +1,13 @@
 Comment: |
-  First recipe with ws1_assignments for AppsV2 API style assignment-rules
+  recipe with ws1_assignments for AppsV2 API style assignment-rules
   See https://as135.awmdm.com/API/help/#!/apis/10001?!%2FAppsV2%2FAppsV2_UpdateAssignmentRuleAsync
-Description: Creates a munki package for Google Chrome, and imports it into WorkSpace ONE.
-Identifier: com.github.codeskipper.ws1.GoogleChrome.ws1.recipe.yaml
-ParentRecipe: com.github.autopkg.munki.googlechromepkg
+Description: Creates a munki package for Company Portal, and imports it into WorkSpace ONE.
+Identifier: com.github.codeskipper.ws1.CompanyPortal
+ParentRecipe: com.github.jlehikoinen.munki.CompanyPortal
 MinimumVersion: '2.3'
 
 Input:
-  NAME: Google Chrome
+  NAME: Company Portal
 
   # WS1 specific input,  secrets
   WS1_OAUTH_CLIENT_ID: OAUTH2_CLIENT_ID_HERE
