--- a/ws1/MicrosoftCompanyPortal.ws1.recipe.yaml
+++ b/ws1/MicrosoftCompanyPortal.ws1.recipe.yaml
@@ -8,7 +8,7 @@ MinimumVersion: '2.3'
 
 Input:
   NAME: Microsoft Company Portal
-  DISPLAY_NAME: '%DISPLAY_NAME%'
+  DISPLAY_NAME: '%NAME%'
   pkginfo:
     catalogs:
     - testing
