--- a/ws1/MicrosoftCompanyPortal.ws1.recipe.yaml
+++ b/ws1/MicrosoftCompanyPortal.ws1.recipe.yaml
@@ -1,7 +1,7 @@
 Comment: |
   recipe with ws1_assignments for AppsV2 API style assignment-rules
   See https://as135.awmdm.com/API/help/#!/apis/10001?!%2FAppsV2%2FAppsV2_UpdateAssignmentRuleAsync
-Description: Creates a munki package for Company Portal, and imports it into WorkSpace ONE.
+Description: Creates a munki package for Microsoft Company Portal, and imports it into WorkSpace ONE.
 Identifier: com.github.codeskipper.ws1.CompanyPortal
 ParentRecipe: com.github.jlehikoinen.munki.CompanyPortal
 MinimumVersion: '2.3'
@@ -12,9 +12,9 @@ Input:
   pkginfo:
     catalogs:
     - testing
-    description: The Microsoft Company Portal provides access to corporate apps and resources
+    description: The Microsoft Company Portal and SSO Extension provide access to corporate apps and resources
       from almost any network. Your company must already subscribe to Microsoft Intune,
-      and your IT admin must set up your account before you can use this app.
+      and your IT admin must set up your account before you can use these features.
     display_name: '%DISPLAY_NAME%'
     name: '%NAME%'
     unattended_install: true
