updated recipe descriptions

--- a/ws1/GitHubDesktop.ws1.recipe.yaml
+++ b/ws1/GitHubDesktop.ws1.recipe.yaml
@@ -1,7 +1,7 @@
 Comment: |
   recipe with ws1_assignments for AppsV2 API style assignment-rules
   See https://as135.awmdm.com/API/help/#!/apis/10001?!%2FAppsV2%2FAppsV2_UpdateAssignmentRuleAsync
-Description: Creates a munki package for GitHub Desktop, and imports it into WorkSpace ONE.
+Description: Creates a munki package for GitHub Desktop, imports it into WorkSpace ONE UEM, and makes assignment rules.
 Identifier: com.github.codeskipper.ws1.GitHubDesktop
 ParentRecipe: com.github.homebysix.munki.GitHubDesktop
 MinimumVersion: '2.3'
