--- a/ws1/GoogleChrome.ws1.recipe.yaml
+++ b/ws1/GoogleChrome.ws1.recipe.yaml
@@ -1,7 +1,7 @@
 Comment: |
   First recipe with ws1_assignments for AppsV2 API style assignment-rules
   See https://as135.awmdm.com/API/help/#!/apis/10001?!%2FAppsV2%2FAppsV2_UpdateAssignmentRuleAsync
-Description: Creates a munki package for Google Chrome, and imports it into WorkSpace ONE.
+Description: Creates a munki package for Google Chrome, imports it into WorkSpace ONE UEM, and makes assignment rules.
 Identifier: com.github.codeskipper.ws1.GoogleChrome.ws1.recipe.yaml
 ParentRecipe: com.github.autopkg.munki.googlechromepkg
 MinimumVersion: '2.3'
