--- a/ws1/GitHubCLI.ws1.recipe.yaml
+++ b/ws1/GitHubCLI.ws1.recipe.yaml
@@ -1,12 +1,22 @@
 Comment:
-Description: Creates a munki package for Microsoft Edge, and imports it into WorkSpace ONE.
-Identifier: com.github.codeskipper.ws1.MicrosoftEdge
-ParentRecipe: com.github.n8felton.munki.MicrosoftEdge
+Description: Creates a munki package for GitHub CLI, and imports it into WorkSpace ONE.
+Identifier: com.github.codeskipper.ws1.GitHubCLI
+ParentRecipe: com.github.homebysix.munki.GitHubCLI
 MinimumVersion: '2.3'
 
 Input:
-  NAME: Microsoft Edge
-  MUNKI_REPO_SUBDIR: apps/Microsoft
+  MUNKI_REPO_SUBDIR: 'apps/%NAME%'
+  MUNKI_CATEGORY: 'Development'
+  pkginfo:
+    catalogs:
+    - testing
+    description: Command line interface for managing your GitHub projects. See https://cli.github.com/
+    developer: GitHub, Inc.
+    display_name: '%NAME%'
+    name: '%NAME%'
+    category: '%MUNKI_CATEGORY%'
+    unattended_install: true
+    unattended_uninstall: true
 
   # WS1 specific input,  secrets
   WS1_OAUTH_CLIENT_ID: OAUTH2_CLIENT_ID_HERE
