--- a/ws1/LastPass-Safari.ws1.recipe.yaml
+++ b/ws1/LastPass-Safari.ws1.recipe.yaml
@@ -1,13 +1,24 @@
-Comment:
-Description: Creates a munki package for Microsoft Teams, and imports it into WorkSpace ONE.
-Identifier: com.github.codeskipper.ws1.MicrosoftTeams
-ParentRecipe: com.github.apettinen.munki.MSTeams
+Comment: Needed to put in complete pkginfo section to set initial Catalog to Testing
+Description: Imports a munki package for LastPass for Safari into WorkSpace ONE.
+Identifier: com.github.codeskipper.ws1.LastPass_Safari
+ParentRecipe: com.github.poundbangbash.eholtam-recipes.munki.LastPass_Safari
 MinimumVersion: '2.3'
 
 Input:
-  NAME: Microsoft Teams
-  MUNKI_REPO_SUBDIR: apps/Microsoft
-  MUNKI_CATEGORY: Productivity
+  NAME: LastPass for Safari
+  MUNKI_REPO_SUBDIR: apps/lastpass
+  pkginfo:
+    name: '%NAME%'
+    display_name: '%NAME%'
+    category: Security
+    catalogs:
+    - testing
+    description: |
+      Securely save passwords and automatically log into any site on the internet.
+    developer: LogMeIn
+    unattended_install: True
+    minimum_os_version: '10.12.0'
+
 
   # WS1 specific input,  secrets
   WS1_OAUTH_CLIENT_ID: OAUTH2_CLIENT_ID_HERE
@@ -57,5 +68,3 @@ Process:
     ws1_groupid: '%WS1_GROUPID%'
     ws1_smart_group_name: '%WS1_SMART_GROUP_NAME%'
     ws1_push_mode: '%WS1_PUSH_MODE%'
-
-
