--- a/ws1/Firefox.ws1.recipe.yaml
+++ b/ws1/Firefox.ws1.recipe.yaml
@@ -1,27 +1,13 @@
-Comment: |
-  recipe with ws1_assignments for AppsV2 API style assignment-rules
-  See https://as135.awmdm.com/API/help/#!/apis/10001?!%2FAppsV2%2FAppsV2_UpdateAssignmentRuleAsync
-Description: Downloads and Creates a munki package for Microsoft Company Portal, imports it into WorkSpace ONE UEM, and makes assignment rules.
-Identifier: com.github.codeskipper.ws1.MicrosoftVisualStudioCode
-ParentRecipe: com.github.killahquam.munki.visualstudiocode
+Comment:
+Description: Creates a munki package for Mozilla Firefox, and imports it into WorkSpace ONE.
+Identifier: com.github.codeskipper.ws1.MozillaFirefox
+ParentRecipe: com.github.autopkg.munki.firefox-rc-en_US
 MinimumVersion: '2.3'
 
 Input:
-  NAME: Microsoft Visual Studio Code
-  DISPLAY_NAME: Microsoft Visual Studio Code
-  MUNKI_REPO_SUBDIR: apps/Microsoft
-  pkginfo:
-    catalogs:
-    - testing
-    category: Development
-    developer: Microsoft
-    description: |
-      Code combines the streamlined UI of a modern editor with rich code assistance and navigation, and an integrated debugging experience – without the need for a full IDE.
-    display_name: '%DISPLAY_NAME%'
-    name: '%NAME%'
-    unattended_install: true
-    unattended_uninstall: true
-
+  NAME: Mozilla Firefox
+  LOCALE: en-US
+  RELEASE: latest-esr
 
   # WS1 specific input,  secrets
   WS1_OAUTH_CLIENT_ID: OAUTH2_CLIENT_ID_HERE
