--- a/ws1/LastPass-Safari.ws1.recipe.yaml
+++ b/ws1/LastPass-Safari.ws1.recipe.yaml
@@ -1,5 +1,5 @@
 Comment: Needed to put in complete pkginfo section to set initial Catalog to Testing
-Description: Imports a munki package for LastPass for Safari into WorkSpace ONE.
+Description: Imports a munki package for LastPass for Safari into WorkSpace ONE, imports it into WorkSpace ONE UEM, and makes assignment rules.
 Identifier: com.github.codeskipper.ws1.LastPass_Safari
 ParentRecipe: com.github.poundbangbash.eholtam-recipes.munki.LastPass_Safari
 MinimumVersion: '2.3'
