--- a/ws1/MicrosoftDefender.ws1.recipe.yaml
+++ b/ws1/MicrosoftDefender.ws1.recipe.yaml
@@ -1,5 +1,5 @@
 Comment:
-Description: Creates a munki package for Microsoft Defender, and imports it into WorkSpace ONE.
+Description: Downloads and Creates a munki package for Microsoft Defender, imports it into WorkSpace ONE UEM, and makes assignment rules.
 Identifier: com.github.codeskipper.ws1.MicrosoftDefender
 ParentRecipe: com.github.rtrouton.munki.microsoftdefender
 MinimumVersion: '2.3'
