--- a/ws1/JetBrainsToolbox.ws1.recipe.yaml
+++ b/ws1/JetBrainsToolbox.ws1.recipe.yaml
@@ -1,11 +1,26 @@
-Comment: use override with PLATFORM_ARCH setting to get Intel or Apple Silicon versions
-Description: Downloads and Creates a munki package for Docker Desktop, imports it into WorkSpace ONE UEM, and makes assignment rules.
-Identifier: com.github.codeskipper.ws1.DockerDesktop
-ParentRecipe: com.github.homebysix.munki.DockerDesktop
+Comment:
+Description: Creates a munki package for JetBrains Toolbox, and imports it into WorkSpace ONE.
+Identifier: com.github.codeskipper.ws1.JetBrainsToolbox
+ParentRecipe: com.github.autopkg.arubdesu-recipes.munki.JetBrainsToolbox
 MinimumVersion: '2.3'
 
 Input:
-  NAME: Docker Desktop
+  ARCH: Override_as_mac_or_macM1
+  NAME: JetBrains Toolbox
+  pkginfo:
+    category: Development
+    catalogs:
+    - testing
+    description: |
+      Manage your JetBrains tools easily.
+        - Install
+        - Update automatically
+        - Update the plugins together with IDE
+        - Roll back and downgrade
+    developer: JetBrains s.r.o.
+    display_name: JetBrains Toolbox
+    name: '%NAME%'
+    unattended_install: true
 
   # WS1 specific input,  secrets
   WS1_OAUTH_CLIENT_ID: OAUTH2_CLIENT_ID_HERE
@@ -20,25 +35,6 @@ Input:
   WS1_GROUPID: GROUP_ID_HERE
   WS1_SMART_GROUP_NAME: SMART_GROUP_NAME_HERE
   WS1_PUSH_MODE: PUSH_MODE_SETTING
-
-  # WS1 - testing new AppsV2 assignments feature
-  ws1_app_assignments:
-      - distribution:
-          name: ASSIGNMENT_NAME
-          description: ASSIGNMENT_DESCRIPTION
-          smart_group_names:
-            - SMART_GROUP_NAME1
-            - SMART_GROUP_NAME2
-          app_delivery_method: AUTO_OR_ON_DEMAND
-          distr_delay_days: DISTRIBUTION_DELAY_DAYS
-          display_in_app_catalog: true
-          is_default_assignment: false
-          keep_app_updated_automatically: true
-        restriction:
-            remove_on_unenroll: false
-            managed_access: false
-            desired_state_management: false
-            prevent_removal: false
 
 Process:
 - Processor: com.github.codeskipper.VMWARE-WorkSpaceOneImporter/WorkSpaceOneImporter
