--- a/ws1/iTerm2.ws1.recipe.yaml
+++ b/ws1/iTerm2.ws1.recipe.yaml
@@ -1,13 +1,10 @@
 Comment:
-Description: Downloads and Creates a munki package for Mozilla Firefox, imports it into WorkSpace ONE UEM, and makes assignment rules.
-Identifier: com.github.codeskipper.ws1.MozillaFirefox
-ParentRecipe: com.github.autopkg.munki.firefox-rc-en_US
+Description: Downloads and Creates a munki package for iTerm2, imports it into WorkSpace ONE UEM, and makes assignment rules.
+Identifier: com.github.codeskipper.ws1.iTerm2
+ParentRecipe: io.github.hjuutilainen.munki.iTerm2
 MinimumVersion: '2.3'
 
 Input:
-  NAME: Mozilla Firefox
-  LOCALE: en-US
-  RELEASE: latest-esr
 
   # WS1 specific input,  secrets
   WS1_OAUTH_CLIENT_ID: OAUTH2_CLIENT_ID_HERE
@@ -22,6 +19,7 @@ Input:
   WS1_GROUPID: GROUP_ID_HERE
   WS1_SMART_GROUP_NAME: SMART_GROUP_NAME_HERE
   WS1_PUSH_MODE: PUSH_MODE_SETTING
+
 
   # WS1 - testing new AppsV2 assignments feature
   ws1_app_assignments:
@@ -41,6 +39,7 @@ Input:
             managed_access: false
             desired_state_management: false
             prevent_removal: false
+
 
 Process:
 - Processor: com.github.codeskipper.VMWARE-WorkSpaceOneImporter/WorkSpaceOneImporter
