spelling WorkspaceONEIntelligentHub.ws1.recipe.yaml

--- a/ws1/WorkspaceONEIntelligentHub.ws1.recipe.yaml
+++ b/ws1/WorkspaceONEIntelligentHub.ws1.recipe.yaml
@@ -2,7 +2,7 @@ Comment: |
   Import to WS1 as native app to deploy as update. Avoids issue with No hub deployed on newly enrolled Macs, which
   is triggered by asking VMWare support to seed new versions in UEM
 Description: |
-  Downloads and Creates a munki package for VMware Workspace ONE Intelligent Hub, imports it into
+  Downloads and Creates a munki package for VMWare Workspace ONE Intelligent Hub, imports it into
   WorkSpace ONE UEM, and makes assignment rules.
 Identifier: com.github.codeskipper.ws1.WorkspaceONEIntelligentHub
 ParentRecipe: io.github.hjuutilainen.munki.WorkspaceONEIntelligentHub
