--- a/ws1/MicrosoftTeamsClassic.ws1.recipe.yaml
+++ b/ws1/MicrosoftTeamsClassic.ws1.recipe.yaml
@@ -1,11 +1,12 @@
-Comment:
-Description: Creates a munki package for Microsoft Teams, and imports it into WorkSpace ONE.
+Comment: Name changed to add Classic after Microsoft pivot to new name in October 2023. Identifier stays the same, parent recipe did not change name either, but added new name to Installs array.
+Description: Creates a munki package for Microsoft Teams Classic, and imports it into WorkSpace ONE.
 Identifier: com.github.codeskipper.ws1.MicrosoftTeams
 ParentRecipe: com.github.apettinen.munki.MSTeams
 MinimumVersion: '2.3'
 
 Input:
-  NAME: Microsoft Teams
+  NAME: Microsoft Teams Classic
+  DISPLAY_NAME: Microsoft Teams Classic
   MUNKI_REPO_SUBDIR: apps/Microsoft
   MUNKI_CATEGORY: Productivity
 
@@ -22,25 +23,6 @@ Input:
   WS1_GROUPID: GROUP_ID_HERE
   WS1_SMART_GROUP_NAME: SMART_GROUP_NAME_HERE
   WS1_PUSH_MODE: PUSH_MODE_SETTING
-
-  # WS1 - testing new AppsV2 assignments feature
-  ws1_app_assignments:
-      - distribution:
-          name: ASSIGNMENT_NAME
-          description: ASSIGNMENT_DESCRIPTION
-          smart_group_names:
-            - SMART_GROUP_NAME1
-            - SMART_GROUP_NAME2
-          app_delivery_method: AUTO_OR_ON_DEMAND
-          distr_delay_days: DISTRIBUTION_DELAY_DAYS
-          display_in_app_catalog: true
-          is_default_assignment: false
-          keep_app_updated_automatically: true
-        restriction:
-            remove_on_unenroll: false
-            managed_access: false
-            desired_state_management: false
-            prevent_removal: false
 
 Process:
 - Processor: com.github.codeskipper.VMWARE-WorkSpaceOneImporter/WorkSpaceOneImporter
