tweaked Microsoft Teams (work or school).ws1.recipe.yaml - documented more in pkginfo notes - the need to change the NAME to skip the parenthesis in (work or school) to avoid upload error to WS1 UEM

--- a/ws1/Microsoft Teams (work or school).ws1.recipe.yaml
+++ b/ws1/Microsoft Teams (work or school).ws1.recipe.yaml
@@ -1,5 +1,5 @@
 Comment: |
-    needed to change the NAME to skip the parenthesis in (work or school) to avoid upload error to WS1 UEM
+    2024-02-22 - needed to change the NAME to skip the parenthesis in (work or school) to avoid upload error to WS1 UEM
 Description: Creates a munki package for Microsoft Teams (work or school), and imports it into WorkSpace ONE UEM.
 Identifier: com.github.codeskipper.ws1.Microsoft Teams work or school
 ParentRecipe: com.github.dataJAR-recipes.munki.Microsoft Teams work or school
@@ -23,7 +23,7 @@ Input:
     display_name: '%DISPLAY_NAME%'
     name: '%NAME%'
     notes: |
-        needed to change the NAME to skip the parenthesis in (work or school) to avoid upload error to WS1 UEM
+        2024-02-22 - needed to change the NAME to skip the parenthesis in (work or school) to avoid upload error to WS1 UEM
     unattended_install: true
     unattended_uninstall: true
 
