PaloAltoNetworksGlobalProtect.munki.recipe.yaml - custom Munki recipe added with extra Processor step to replace hyphens with dots in Munki version number, so Hub can detect if it needs updating

--- a/ws1/PaloAltoNetworksGlobalProtect.ws1.recipe.yaml
+++ b/ws1/PaloAltoNetworksGlobalProtect.ws1.recipe.yaml
@@ -3,7 +3,7 @@ Comment: |
     the recipe override
 Description: Creates a Munki package for Palo Alto Networks GlobalProtect, and imports it into WorkSpace ONE UEM.
 Identifier: com.github.codeskipper.PaloAltoNetworksGlobalProtect.ws1.recipe.yaml
-ParentRecipe: com.github.ygini.munki.GlobalProtect
+ParentRecipe: com.github.codeskipper.munki.PaloAltoNetworksGlobalProtect
 MinimumVersion: '2.3'
 
 Input:
