--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,21 @@
 repos:
-  - repo: https://github.com/python/black
-    rev: 22.10.0
-    hooks:
-      - id: black
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
-    hooks:
-      - id: isort
-        args: ["--profile", "black"]
-  - repo: https://github.com/pycqa/flake8
-    rev: 5.0.4
-    hooks:
-      - id: flake8
+    - repo: https://github.com/python/black
+      rev: 24.4.2
+      hooks:
+          - id: black
+    - repo: https://github.com/pre-commit/mirrors-isort
+      rev: v5.10.1
+      hooks:
+          - id: isort
+            args: ["--profile", "black"]
+    - repo: https://github.com/pycqa/flake8
+      rev: 7.1.0
+      hooks:
+          - id: flake8
+    -   repo: https://github.com/homebysix/pre-commit-macadmin
+        rev: v1.16.2
+        hooks:
+            -   id: check-plists
+            -   id: check-autopkg-recipes
+                args: ['--strict']
+
