--- a/ws1-parent-recipes/PaloAltoNetworksGlobalProtect.munki.recipe.yaml
+++ b/ws1-parent-recipes/PaloAltoNetworksGlobalProtect.munki.recipe.yaml
@@ -109,12 +109,12 @@ Process:
 
 - Processor: Copier
   Arguments:
-    destination_path: '%RECIPE_CACHE_DIR%/%NAME%/%NAME%.app/Contents'
-    source_path: '%RECIPE_CACHE_DIR%/%NAME%/Contents'
+    destination_path: '%RECIPE_CACHE_DIR%/GlobalProtect/GlobalProtect.app/Contents'
+    source_path: '%RECIPE_CACHE_DIR%/GlobalProtect/Contents'
 
 - Processor: Versioner
   Arguments:
-    input_plist_path: '%RECIPE_CACHE_DIR%/%NAME%/%NAME%.app/Contents/Info.plist'
+    input_plist_path: '%RECIPE_CACHE_DIR%/GlobalProtect/GlobalProtect.app/Contents/Info.plist'
 
 - Processor: com.github.homebysix.FindAndReplace/FindAndReplace
   Arguments:
