erase-install.ws1.recipe.yaml - tweak pkginfo Notes bit and comment

--- a/ws1/erase-install.ws1.recipe.yaml
+++ b/ws1/erase-install.ws1.recipe.yaml
@@ -1,13 +1,4 @@
-Comment:  |
-      Installed silently and not shown in Hub.
-
-      Additionally installs mist-cli to download macOS installers and swiftDialog for user dialogues.
-
-      Intended to be called on-demand from WS1 UEM script.
-
-      Avoids the need to remove a EFI firmware password on Intel Macs at the
-      expense of additional waiting to download the macOS installer and
-      preparation time.
+Comment: (see Notes in pkginfo)
 Description: download and import package for erase-install script into Munki, then import into WorkSpace ONE.
 Identifier: com.github.codeskipper.ws1.erase-install
 ParentRecipe: com.github.its-unibas.munki.erase-install
@@ -20,13 +11,22 @@ Input:
     catalogs:
       - testing
     category: Utilities
-    description: A set of tools to automate downloading macOS installers and erasing
+    description: A set of scripts and tools to automate downloading macOS installers and erasing
       or upgrading macOS in a single process. See https://github.com/grahampugh/erase-install
     developer: Graham Pugh
     display_name: '%NAME%'
     minimum_os_version: '11.0'
     name: '%NAME%'
-    notes: '%COMMENT%'
+    notes: |
+      To be installed silently and not shown in Hub.
+
+      Additionally installs mist-cli to download macOS installers and swiftDialog for user dialogues.
+
+      To be called on-demand from WS1 UEM script.
+
+      Avoids the need to remove a EFI firmware password on Intel Macs at the
+      expense of additional waiting to download the macOS installer and
+      preparation time.
 
   WS1_OAUTH_CLIENT_ID: OAUTH2_CLIENT_ID_HERE
   WS1_OAUTH_CLIENT_SECRET: OAUTH2_CLIENT_CLIENT_SECRET_HERE
