removing macsesh because of deprecated deps

--- a/WorkSpaceOneImporter/WorkSpaceOneImporter.recipe.yaml
+++ b/WorkSpaceOneImporter/WorkSpaceOneImporter.recipe.yaml
@@ -4,10 +4,10 @@ Description: |
   NB - identifier is different to avoid conflict with the plist version!
   Instead of setting the 'Processor' key to a processor name only, we separate the
   recipe identifier and the processor name with a slash:
-  Processor: com.github.codeskipper.VMWARE-WorkSpaceOneImporter
+  Processor: com.github.nielshojen.VMWARE-WorkSpaceOneImporter
   ..assuming that this recipe is in one of AutoPkg's search dirs.
 
-Identifier: com.github.codeskipper.VMWARE-WorkSpaceOneImporter
+Identifier: com.github.nielshojen.VMWARE-WorkSpaceOneImporter
 Input: {}
 MinimumVersion: "2.3"
 Process: []
