--- a/examples/GoogleChrome.ws1.recipe.yaml
+++ b/examples/GoogleChrome.ws1.recipe.yaml
@@ -1,15 +1,13 @@
 Comment: |
-  Import to WS1 as native app to deploy as update. Avoids issue with No hub deployed on newly enrolled Macs, which
-  is triggered by asking VMWare support to seed new versions in UEM
-Description: |
-  Downloads and Creates a munki package for VMWare Workspace ONE Intelligent Hub, imports it into
-  WorkSpace ONE UEM, and makes assignment rules.
-Identifier: com.github.codeskipper.ws1.WorkspaceONEIntelligentHub
-ParentRecipe: io.github.hjuutilainen.munki.WorkspaceONEIntelligentHub
+  First recipe with ws1_assignments for AppsV2 API style assignment-rules
+  See https://as135.awmdm.com/API/help/#!/apis/10001?!%2FAppsV2%2FAppsV2_UpdateAssignmentRuleAsync
+Description: Creates a munki package for Google Chrome, imports it into WorkSpace ONE UEM, and makes assignment rules.
+Identifier: com.github.nielshojen.ws1.GoogleChrome.ws1.recipe.yaml
+ParentRecipe: com.github.autopkg.munki.googlechromepkg
 MinimumVersion: '2.3'
 
 Input:
-  NAME: VMWare Workspace ONE Intelligent Hub
+  NAME: Google Chrome
 
   # WS1 specific input,  secrets
   WS1_OAUTH_CLIENT_ID: OAUTH2_CLIENT_ID_HERE
@@ -45,7 +43,7 @@ Input:
             prevent_removal: false
 
 Process:
-- Processor: com.github.codeskipper.VMWARE-WorkSpaceOneImporter/WorkSpaceOneImporter
+- Processor: com.github.nielshojen.VMWARE-WorkSpaceOneImporter/WorkSpaceOneImporter
   Arguments:
     ws1_oauth_client_id: '%WS1_OAUTH_CLIENT_ID%'
     ws1_oauth_client_secret: '%WS1_OAUTH_CLIENT_SECRET%'
